[package]
name = "raytracing_in_one_weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
image = "*"
glam = "*"
rayon = "1.5"
num_cpus = "1.13.1"

#noise = "0.7"
#num_cpus = "1.6"
#serde = "*"
#ron  = "*"
